--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,8 @@
 ---
 include:
   # ipadk
-  - board: nice_nano_v2
+  - board: nrfmicro_13
     shield: iqx3
     artifact-name: iqx3
-  - board: nice_nano_v2
+  - board: nrfmicro_13
     shield: settings_reset
